# stm32mp1-baremetal

./: .gitignore  CMakeLists.txt  build.sh  toolchain-arm-none-eabi.cmake
CoreModules/: djembeCore.h
drivers/: CMakeLists.txt  cache.hh  clocks.hh  cycle_counter.cc  cycle_counter.hh  debounced_switch.hh  i2c.cc  irq_ctrl.c  periph.hh  pin.cc  pmic.hh  rcc.hh  rcc_common.hh
drivers/codec/: CMakeLists.txt  codec.hh  codec_CS42L51.hh
drivers/i2c/: CMakeLists.txt  i2c.cc  i2c.hh  i2c_config_struct.hh
drivers/interrupt/: CMakeLists.txt  interrupt.hh  interrupt_control.hh  interrupt_handler.cc
drivers/pin/: CMakeLists.txt  pin.cc
drivers/sai/: CMakeLists.txt  sai.hh  sai_config_struct.hh  sai_tdm.cc  sai_tdm.hh
examples/audio_processor/: CMakeLists.txt  audio_codec_conf.hh  audio_stream.hh  djembe_example.hh  dual_fm_osc.hh  main.cc  rcc_conf.hh  stm32disco_buttons_conf.hh
util/: audio_frame.hh  iterator_helpers.hh  oscs.hh  zip.hh
util/math/: CMakeLists.txt
